--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,13 @@
 							<a href="#page-top"></a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#about">About us</a>
+							<a class="page-scroll" href="#about">About</a>
 						</li>
 						<li>
 							<a class="page-scroll" href="#services">Services</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#Shop">Shop</a>
+							<a class="page-scroll" href="#portfolio">Portfolio</a>
 						</li>
 						<li>
 							<a class="page-scroll" href="#team">Team</a>
@@ -71,9 +71,9 @@
 			<div class="container">
 				<div class="slider-container">
 					<div class="intro-text">
-						<div class="intro-lead-in">Welcome To Awearness Kollektiv</div>
-						<div class="intro-heading">Reuse, exchange and reduce </div>
-						<a href="#about" class="page-scroll btn btn-xl">more info</a>
+						<div class="intro-lead-in">Welcome To Our Studio!</div>
+						<div class="intro-heading">It's Nice To Meet You</div>
+						<a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
 					</div>
 				</div>
 			</div>
@@ -83,8 +83,8 @@
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<div class="section-title">
-							<h2>Over Ons</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<h2>ABOUT</h2>
+							<p>A creative agency based on Candy Land, ready to boost your business with some beautifull templates. Lattes Agency is one of the best in town see more you will be amazed.</p>
 						</div>
 					</div>
 				</div>
@@ -93,8 +93,8 @@
 					<div class="col-md-3 text-center">
 						<div class="mz-module-about">
 							<i class="fa fa-briefcase ot-circle"></i>
-							<h3>Tweedehands kleding</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+							<h3>Web Development</h3>
+							<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
 						</div>
 					</div>
 					<!-- end about module -->
@@ -102,7 +102,7 @@
 					<div class="col-md-3 text-center">
 						<div class="mz-module-about">
 							<i class="fa fa-photo ot-circle"></i>
-							<h3>Koopjes</h3>
+							<h3>Visualisation</h3>
 							<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 						</div>
 					</div>
@@ -111,7 +111,7 @@
 					<div class="col-md-3 text-center">
 						<div class="mz-module-about">
 							<i class="fa fa-camera-retro ot-circle"></i>
-							<h3>Inleveren kleding</h3>
+							<h3>Photography</h3>
 							<p>Accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
 						</div>
 					</div>
@@ -120,7 +120,7 @@
 					<div class="col-md-3 text-center">
 						<div class="mz-module-about">
 							<i class="fa fa-cube ot-circle"></i>
-							<h3>Duurzame kleding</h3>
+							<h3>UI/UX Design</h3>
 							<p> Itaque earum rerum hic tenetur a sapiente, ut aut reiciendis maiores</p>
 						</div>
 					</div>
@@ -140,8 +140,60 @@
 					</div>
 					<div class="col-md-6">
 						<!-- skill bar item -->
-                                                <img width=670 height=480 src="{{URL::asset('/images/kollektiv.jpg')}}" alt="Sample photo">
-						
+						<div class="skillbar-item">
+							<div class="skillbar-score">
+								<span class="score">90</span><span class="percent">%</span>
+							</div>
+							<div class="skillbar" data-percent="90%">
+								<h3>Web design</h3>
+								<div class="skillbar-bar">
+									<div class="skillbar-percent" style="width: 90%;">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- skill bar item -->
+						<div class="skillbar-item">
+							<div class="skillbar-score">
+								<span class="score">80</span><span class="percent">%</span>
+							</div>
+							<div class="skillbar" data-percent="80%">
+								<h3>Development</h3>
+								<div class="skillbar-bar">
+									<div class="skillbar-percent" style="width: 80%;">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- skill bar item -->
+						<div class="skillbar-item">
+							<div class="skillbar-score">
+								<span class="score">85</span><span class="percent">%</span>
+							</div>
+							<div class="skillbar" data-percent="85%">
+								<h3>Photography</h3>
+								<div class="skillbar-bar">
+									<div class="skillbar-percent" style="width: 85%;">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- skill bar item -->
+						<div class="skillbar-item">
+							<div class="skillbar-score">
+								<span class="score">70</span><span class="percent">%</span>
+							</div>
+							<div class="skillbar" data-percent="70%">
+								<h3>Marketing</h3>
+								<div class="skillbar-bar">
+									<div class="skillbar-percent" style="width: 70%;">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="overlay-dark bg-img1 dark-bg short-section">
 			<div class="container text-center">
@@ -173,12 +225,12 @@
 				</div>
 			</div>
 		</section>
-		<section id="shop" class="light-bg">
+		<section id="portfolio" class="light-bg">
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
-						<h2>Winkel</h2>
+						<h2>Portfolio</h2>
 						<p>Our portfolio is the best way to show our work, you can see here a big range of our work. Check them all and you will find what you are looking for.</p>
 					</div>
 				</div>
@@ -190,9 +242,9 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-1.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Cloths Woman</h2>
+								<h2>Dean & Letter</h2>
 								<p>Branding, Design</p>
-								<a href="{{ url('dameskleding') }}">Bekijk meer</a>
+								<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -204,7 +256,7 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Cloths Men</h2>
+								<h2>Startup Framework</h2>
 								<p>Branding, Web Design</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
 							</figcaption>
@@ -218,7 +270,7 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-3.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Shoes Men</h2>
+								<h2>Lamp & Velvet</h2>
 								<p>Branding, Web Design</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-3">View more</a>
 							</figcaption>
@@ -234,7 +286,7 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-4.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Shoes Woman</h2>
+								<h2>Smart Name</h2>
 								<p>Branding, Design</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-4">View more</a>
 							</figcaption>
@@ -248,7 +300,7 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-5.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Accesoires</h2>
+								<h2>Fast People</h2>
 								<p>Branding, Web Design</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-5">View more</a>
 							</figcaption>
@@ -262,14 +314,14 @@
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Sun Glasses</h2>
+								<h2>Kites & Stars</h2>
 								<p>Branding, Web Design</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
 							</figcaption>
 						</figure>
 					</div>
 				</div>
-				<!-- end winkel item -->
+				<!-- end portfolio item -->
 			</div>
 			</div><!-- end container -->
 		</section>
